--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx cypress open"
+    "start": "npx cypress open",
+    "cli": "cypress run"
   },
   "keywords": [],
   "author": "",
