--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,17 +4,28 @@
 version: 2.1
 orbs:
   cypress: cypress-io/cypress@1
-executors:
-  base10-foo-bar:
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+jobs:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: 'cypress/base:10'
-    environment:
-      username: $username
-      password: $password
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "Say hello"
+          command: echo ${username}
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  build:
-    jobs:
-      - cypress/run
+   say-hello-workflow:
+     jobs:
+       - say-hello
+#  build:
+#    jobs:
+#      - cypress/run
