--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,12 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-   say-hello-workflow:
-     jobs:
-       - say-hello
-#  build:
-#    jobs:
-#      - cypress/run
+#    say-hello-workflow:
+#      jobs:
+#        - say-hello
+ build:
+   jobs:
+     - cypress/run
+   environment:
+    password: $password
+    username: $username
