--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 executors:
   with-chrome:
     docker:
-      - image: 'cypress/browsers:node14.16.0-chrome90-ff88'
+      - image: 'cypress/browsers:node16.17.1-chrome105-ff104-edge'
 workflows:
   build:
     jobs:
