--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,4 @@ workflows:
       - cypress/run:
           store_artifacts: true
           executor: with-chrome
-          browser: chrome
+          browser: firefox
