--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npx cypress open",
-    "cli": "cypress run"
+    "cli": "cypress run",
+    "cypress": "cypress run"
   },
   "keywords": [],
   "author": "",
