--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Download the build folders
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-          path: build
+
 
       - name: 'UI Tests - Chrome'
         uses: cypress-io/github-action@v4.1.0 # use the explicit version number
@@ -31,12 +27,12 @@ jobs:
           # we have already installed all dependencies above
           install: false
           browser: chrome
-          record: true
+          # record: true
           parallel: true
           group: 'UI - Chrome'
           spec: cypress/e2e/*
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Recommended: pass the GitHub token lets this action correctly
           # determine the unique run id necessary to re-run the checks
           GITHUB_TOKEN: ${{ secrets.CITOKEN }}
