--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,14 @@
-name: Cypress Tests with Install Job and UI Chrome Job x 5
-
+name: Cypress tests
 on: [push]
-
 jobs:
-  install:
-  # ...
-
-  ui-chrome-tests:
-    runs-on: ubuntu-latest
-    container: cypress/browsers:node12.18.3-chrome87-ff82
-    needs: install
-    strategy:
-      fail-fast: false
-      matrix:
-        # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+  cypress-run:
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-
-
-      - name: 'UI Tests - Chrome'
-        uses: cypress-io/github-action@v4.1.0 # use the explicit version number
-        with:
-          # we have already installed all dependencies above
-          install: false
-          browser: chrome
-          # record: true
-          parallel: true
-          group: 'UI - Chrome'
-          spec: cypress/e2e/*
+      - name: Cypress run with env
+        uses: cypress-io/github-action@v4
         env:
           # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Recommended: pass the GitHub token lets this action correctly
