--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
           # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Recommended: pass the GitHub token lets this action correctly
           # determine the unique run id necessary to re-run the checks
-          GITHUB_TOKEN: ${{ secrets.CITOKEN }}
-          CYPRESS_DOMAIN: ${{ secrets.CYPRESS_DOMAIN }}
-          CYPRESS_PASSWORD: ${{ secrets.CYPRESS_PASSWORD }}
-          CYPRESS_USERNAME: ${{ secrets.CYPRESS_USERNAME }}
-          CYPRESS_WAIT_TIME: ${{ secrets.CYPRESS_WAIT_TIME }}
+          GITHUB_TOKEN: ${{ CITOKEN }}
+          CYPRESS_DOMAIN: ${{ test.CYPRESS_DOMAIN }}
+          CYPRESS_PASSWORD: ${{ test.CYPRESS_PASSWORD }}
+          CYPRESS_USERNAME: ${{ test.CYPRESS_USERNAME }}
+          CYPRESS_WAIT_TIME: ${{ test.CYPRESS_WAIT_TIME }}
